--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Pragprog Books Online Store</title>
-	<%= stylesheet_link_tag "scaffold" %>
 	<%= stylesheet_link_tag "depot" , :media => "all" %>
-	<%= javascript_include_tag :defaults %>
+	<%= stylesheet_link_tag "application" , :media => "all" %>
+	<%= javascript_include_tag 'application' %>
 	<%= csrf_meta_tag %>
 </head>
 <body id="store">
@@ -14,6 +14,11 @@
 </div>
 <div id="columns">
 <div id="side">
+<% if @cart %>
+<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+
+<% end %>
+<% end %>
 <a href="http://www....">Home</a><br />
 <a href="http://www..../faq">Questions</a><br />
 <a href="http://www..../news">News</a><br />
