--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <div id="side">
 <% if @cart %>
 <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-
+<% render @cart %>
 <% end %>
 <% end %>
 <a href="http://www....">Home</a><br />
